<resources>
    <string name="app_name">Shopping Phone</string>
    <string name="selecciona_un_producto">Selecciona un producto</string>
    <string name="blu_vivo_x13_plus">BLU Vivo XL3 Plus - 6.0” HD+18:9 Display Smartphone with Qualcomm Snapdragon</string>
    <string name="price_blu_vivo_xl3_plus">139 $</string>
    <string name="bq_aquaris_x5">BQ Aquaris X5</string>
    <string name="price_bq_aquaris_x5">150 $</string>
    <string name="tex_essential_phone">Essential Phone in Black Moon – 128 GB Unlocked Titanium and Ceramic phone</string>
    <string name="price_essential_phone">489 $</string>
    <string name="google_pixel_2">Google Pixel 2 GSM/CDMA Unlocked</string>
    <string name="price_google_pixel">539 $</string>
<<<<<<< HEAD
    <string name="honor_7x">Honor 7X - 18:9 screen ratio, 5.93 full-view display. Dual-lens camera. Unlocked Smartphone, Black</string>
    <string name="price_honor_7x">199 $</string>
    <string name="huawei_mate_10_pro" translatable="false">Huawei Mate 10 Pro Unlocked Phone, 6 6GB/128GB, AI Processor</string>
    <string name="price_huawei_mate_10_pro">649 $</string>
    <string name="huawei_p20_pro">Huawei P20 Pro 128GB Dual-SIM Factory Unlocked 4G/LTE</string>
    <string name="price_huawei_p20_pro">959 $</string>
    <string name="iphone_8">Apple iPhone 8 4.7, 64 GB, Fully Unlocked</string>
    <string name="price_iphone_8">801 $</string>
    <string name="iphone_x">Apple iPhone X, Fully Unlocked 5.8, 64 GB</string>
    <string name="price_iphone_x">1139 $</string>
    <string name="lg_g7_thinq">LG G7 THINQ - 32 GB - Unlocked</string>
    <string name="price_lg_g7_thinq">600 $</string>
    <string name="lg_g7_thinq2">LG G7 THINQ 2 - 128 GB - Unlocked</string>
    <string name="price_lg_g7_thinq2">750 $</string>
    <string name="mate_10_porsche_design">Huawei Mate 10 Porsche Design</string>
    <string name="price_mate_10_porsche_design">1225 $</string>
    <string name="motorola_moto_g5">Moto G (5th Gen) G5 4G LTE Dual Sim XT1671 32GB</string>
    <string name="price_motorola_moto_g5">165 $</string>
    <string name="nokia8_sirocco">Nokia 8 Sirocco TA-1005 128GB</string>
    <string name="price_nokia8_sirocco">600 $</string>
    <string name="nokia_7">Nokia 7 Plus (TA-1062) 4GB/64GB</string>
    <string name="price_nokia_7">400 $</string>
    <string name="oneplus_5t">OnePlus 5T A5010 64GB Midnight Black</string>
    <string name="price_oneplus_5t">637 $</string>
    <string name="razer_phone_black">Razer Phone - 120 Hz Ultra Motion Display - 64GB Memory - 8GB RAM</string>
    <string name="price_razer_phone_black">649 $</string>
    <string name="samsung_a8_2018">Samsung Galaxy A8</string>
    <string name="price_samsung_a8_2018">519 $</string>
    <string name="samsung_galaxy_s9_plus">Samsung Galaxy S9 Unlocked Smartphone</string>
    <string name="price_samsung_galaxy_s9_plus">801 $</string>
    <string name="xiaomi_mi_mix">Xiaomi MI A1 (64GB, 4GB RAM) with Android One and Dual Cameras</string>
    <string name="price_xiaomi_mi_mix">169 $</string>
    <string name="xiaomi_mi_mix_2">Xiaomi Mi Mix 2 (64GB, 6GB RAM) Global 4G LTE GSM</string>
    <string name="price_xiaomi_mi_mix_2">448 $</string>
    <string name="order_blu_vivo_xl3_plus">Your ordered BLU VIVO XL3 PLUS</string>
    <string name="order_bq_aquaris_x5">Your ordered BQ AQUARIS X5</string>
    <string name="order_essential_phone">Your ordered ESSENTIAL PHONE</string>
    <string name="order_google_pixel_2">Your ordered GOOGLE PIXEL 2</string>
    <string name="order_HONOR_7">Your ordered HONOR 7</string>
    <string name="order_huawei_mate_10_pro">Your ordered HUAWEI MATE 10 PRO</string>
    <string name="order_huawei_p20_pro">Your ordered HUAWEI P20 PRO</string>
    <string name="order_iphone_8">Your ordered IPHONE 8</string>
    <string name="order_iphone_x">Your ordered IPHONE X</string>
    <string name="order_lg_g7_thinq">Your ordered LG G7 THINQ</string>
    <string name="order_lg_g7_thinq2">Your ordered LG G7 THINQ 2</string>
    <string name="order_mate_10_porsche_design">Your ordered HUAWEI MATE 10 PORSCHE DESIGN</string>
    <string name="order_motorola_moto_g5">Your ordered MOTOROLA MOTO G5</string>
    <string name="order_nokia8_sirocco">Your ordered NOKIA 8 SIROCCO</string>
    <string name="order_nokia_7">Your ordered NOKIA 7</string>
    <string name="order_oneplus_5t">Your ordered ONEPLUS 5T</string>
    <string name="order_razer_phone_black">Your ordered RAZER PHONE BLACK</string>
    <string name="order_samsung_a8_2018">Your ordered SAMSUNG A8</string>
    <string name="order_samsung_galaxy_s9_plus">Your ordered SAMSUNG GALAXY S9 PLUS</string>
    <string name="order_xiaomi_mi_mix">Your ordered XIAOMI MI MIX</string>
    <string name="order_xiaomi_mi_mix_2">Your ordered XIAOMI MI MIX 2</string>
=======
    <string name="header_main">Lista de productos en carrito</string>
    <string name="carrito_vacio">Actualmente tu carrito se encuentra vacío</string>
>>>>>>> Richard
</resources>
